# simple_music_player

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs  ui.rs
