[package]
name = "music_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.29.0"
rand = "0.9.2"
ratatui = "0.29.0"
rodio = "0.20.0"
rustfft = "6.4.0"
itertools = "0.13.0"
apodize = "1.0.0"
ringbuf = "0.3.3"
